--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "@prisma/client": "^6.6.0",
         "argon2": "^0.41.1",
+        "cors": "^2.8.5",
         "express": "^5.1.0",
         "express-validator": "^7.2.1",
         "jsonwebtoken": "^9.0.2",
